<resources>
    <string name="app_name">云差事</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_aboutus">关于我们</string>
    <string name="title_activity_personalinfo">个人资料</string>
    <string name="title_activity_attention">我的关注</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_tpregister">设置密码</string>
    <string name="title_activity_personalauthenticate">实名认证</string>
    <string name="title_activity_enterpriseauthenticate">企业认证</string>
    <string name="title_activity_resetpwdverify">验证手机号</string>
    <string name="title_activity_resetpwd">设置密码</string>
    <string name="title_activity_resetnick">设置昵称</string>
    <string name="title_activity_changepwd">修改密码</string>
    <string name="title_activity_hottask">最火任务</string>
    <string name="title_activity_richtask">最壕任务</string>
    <string name="title_activity_notifylist">通知</string>
    <string name="title_activity_demandnotifymessage">需求通知</string>
    <string name="title_activity_demandnotifylist">需求通知</string>
    <string name="title_activity_wonderfulactivitieslist">精彩活动</string>
    <string name="title_activity_demandinfo">任务详情</string>
    <string name="title_fragment_message">消 息</string>
    <string name="title_activity_bindfield">设置订阅标签</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_loaction_picker">选择地区</string>
    <string name="title_activity_subscribe">订阅设置</string>
    <string name="title_activity_messageinfo">消息详情</string>
    <string name="title_activity_sign_agreement">蓝海创意云交付协议</string>
    <string name="title_activity_banner_info">详情</string>
    <string name="title_activity_user_agreement">蓝海创意云用户服务协议</string>
    <string name="v1010_toast_press_again_exit">再次点击返回桌面</string>
    <string name="tab_homeactivity_index">首页</string>
    <string name="tab_homeactivity_demandmaganer">需求管理</string>
    <string name="tab_homeactivity_message">消息</string>
    <string name="test">默认</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_example">Example</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="v1010_toast_error_album_private">无法获取该图片</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="v1010_default_about_tv_copyright">苏州创意云网络科技有限公司 版权所有\nCopyright © 2008 &#8211; 2016 </string>
    <string name="v1010_default_about_tv_protocol">《蓝海创意云用户服务协议》</string>
    <string name="v1010_default_sidebar_tv_phone">400-164-7979</string>
    <string name="v1010_default_login_hint_account">手机号/邮箱/ID号</string>
    <string name="v1010_default_login_hint_pwd">登录密码</string>
    <string name="v1010_default_login_btn_login">登 录</string>
    <string name="v1010_default_login_href_forgetpwd">忘记密码?</string>
    <string name="v1010_default_login_hint_tplogin">使用第三方账号直接登录</string>
    <string name="v1010_default_login_btn_sinalogin">微博登录</string>
    <string name="v1010_default_login_btn_qqlogin">QQ登录</string>
    <string name="v1010_default_login_btn_wechatlogin">微信登录</string>
    <string name="v1010_default_login_href_register">注册</string>
    <string name="v1010_dialog_login_unexist">该账号尚未注册</string>
    <string name="v1010_dialog_login_nagetice_reinput">重新输入</string>
    <string name="v1010_dialog_login_positive_register">去注册</string>
    <string name="v1010_dialog_register_exist">该账号已注册</string>
    <string name="v1010_dialog_register_negative_reinput">重新输入</string>
    <string name="v1010_dialog_register_positive_login">去登录</string>
    <string name="todo">todo</string>
    <string name="v1010_default_resetpwd_verify">验证</string>
    <string name="cancel">取消</string>
    <string name="permit">确定</string>
    <string name="share_title">云差事，让赚钱更简单</string>
    <string name="task_share_title">赚钱神器来也！让赚钱更简单</string>
    <string name="share_app_content">一款为文创工作者精心打造的赚钱神器，海量需求，智能搜索，一键管理，让赚钱更简单!</string>
    <string name="v1010_default_resetpwd_hint_pwd">请输入6-20位新密码</string>
    <string name="v1010_default_resetpwd_hint_check">请再次输入密码</string>
    <string name="v1010_default_resetpwd_btn_submit">确 定</string>
    <string name="v1010_default_register_href_login">登录</string>
    <string name="v1010_default_register_hint_account">请输入11位手机号</string>
    <string name="v1010_default_register_hint_verifycode">请输入验证码</string>
    <string name="v1010_default_register_hint_pwd">请设置6-20位密码</string>
    <string name="v1010_default_register_btn_getverify">获取验证码</string>
    <string name="v1010_default_register_btn_register">注 册</string>
    <string name="v1010_default_register_cb_protocol">阅读并同意</string>
    <string name="v1010_default_register_href_protocol">《蓝海创意云用户服务协议》</string>
    <string name="v1010_default_register_toast_read_agreement">请仔细阅读用户协议</string>
    <string name="v1010_toast_register_error_login_onback">后台登录失败，请手动登录</string>
    <string name="v1010_toast_register_text_pwd_minlength">密码长度至少 6 位</string>
    <string name="v1010_toast_register_text_pwd_maxlength">密码长度至多 20 位</string>
    <string name="v1010_toast_register_text_pwd_illegal">格式错误，仅限字母数字及字符</string>
    <string name="v1010_default_tpregister_hint_pwd">请设置6-20位密码</string>
    <string name="v1010_default_tpregister_hint_pwdcheck">请再次输入密码</string>
    <string name="v1010_default_tpregister_btn_submit">确 认</string>
    <string name="v1010_default_tpregister_text_id">ID: </string>
    <string name="v1010_default_setting_text_clean">清除缓存</string>
    <string name="v1010_default_setting_text_feedback">意见反馈</string>
    <string name="v1010_default_setting_text_update">版本检测</string>
    <string name="v1010_default_setting_text_aboutus">关于我们</string>
    <string name="v1010_default_setting_text_logout">退出登录</string>
    <string name="v1010_dialog_setting_content_logout">确定退出登录?</string>
    <string name="v1010_dialog_setting_content_clean">确定清除缓存?</string>
    <string name="v1010_default_pinfo_text_modifyavatar">修改头像</string>
    <string name="v1010_default_pinfo_text_nickname">昵称</string>
    <string name="v1010_default_pinfo_text_sex">性别</string>
    <string name="v1010_default_pinfo_text_industry">行业选择</string>
    <string name="v1010_default_pinfo_text_field">擅长领域</string>
    <string name="v1010_default_pinfo_text_phone">手机</string>
    <string name="v1010_default_pinfo_text_pwd">修改密码</string>
    <string name="v1010_default_pinfo_text_subscribe">订阅</string>
    <string name="v1010_default_pinfo_hint_pwd">********</string>
    <string name="v1010_default_resetnick_enter_nickname">请输入昵称</string>
    <string name="v1010_default_resetnick_nicklenth_over20">昵称长度超过20</string>
    <string name="v1010_default_feedback_hint_content">请输入您的问题/建议</string>
    <string name="v1010_default_feedback_text_upload">上传图片</string>
    <string name="v1010_default_feedback_hint_size">(最多5张，每张大小不超过5M)</string>
    <string name="v1010_default_feedback_hint_contact">请输入您的手机号码</string>
    <string name="v1010_default_feedback_btn_submit">提 交</string>
    <string name="v1010_toast_feedback_error_images_over_count">最多选择五张图片</string>
    <string name="v1010_toast_feedback_error_image_selected_ever">该图片已选择</string>
    <string name="v1010_toast_feedback_error_content_null">请输入您的问题/建议</string>
    <string name="v1010_toast_feedback_error_contact_null">请输入您的手机号码</string>
    <string name="v1010_dialog_feedback_content_error_upload">图片上传失败</string>
    <string name="v1010_dialog_feedback_positive_reupload">重新上传</string>
    <string name="v1010_dialog_feedback_content_error_feedback">提交反馈失败</string>
    <string name="v1010_dialog_feedback_positive_resubmit">重新提交</string>
    <string name="v1010_dialog_feedback_content_success_feedback">意见反馈成功，我们会尽快处理</string>
    <string name="v1010_dialog_feedback_positive_close">好的</string>
    <string name="v1010_default_demandmanager_rb_ordered">已接需求</string>
    <string name="v1010_default_demandmanager_rb_collected">我的收藏</string>
    <string name="v1010_default_demandmanager_tab_all">全部</string>
    <string name="v1010_default_demandmanager_tab_ontendering">已投标</string>
    <string name="v1010_default_demandmanager_tab_ontendered">已中标</string>
    <string name="v1010_default_demandmanager_tab_ondeliver">交付中</string>
    <string name="v1010_default_demandmanager_tab_onevaluate">待评价</string>
    <string name="v1010_default_demandmanager_text_modify">编辑</string>
    <string name="v1010_default_demandmanager_text_delete">删 除</string>
    <string name="v1010_default_demandmanager_text_complete">取消</string>
    <string name="v1010_default_demandmanager_recommend_foryou">为您推荐</string>
    <string name="v1010_default_demandmanager_text_selectall">全选</string>
    <string name="v1010_default_demandmanager_text_deselectall">全不选</string>
    <string name="v1010_default_demandmanager_hint_empty">暂无需求，赶紧去添加吧~</string>
    <string name="v1010_default_attention_text_null">还未关注任何雇主</string>
    <string name="v1010_default_tp_failure_wxnotinstalled">未安装微信</string>
    <string name="v1010_default_tp_failure_QQnotinstalled">未安装QQ,无法分享</string>
    <string name="v1010_default_tp_failure_qqzonenotinstalled">未安装QQ空间,无法分享</string>
    <string name="v1010_default_tp_share_exit">分享取消</string>
    <string name="v1010_default_tp_share_success">分享成功</string>
    <string name="v1010_default_tp_share_failure">分享失败</string>
    <string name="v1010_default_index_text_hottask">最火需求</string>
    <string name="v1010_default_index_text_richtask">最壕需求</string>
    <string name="v1010_default_index_text_taskcenter">需求大厅</string>
    <string name="v1010_default_index_text_recommend">猜你喜欢</string>
    <string name="v1010_default_index_text_subscribe">+ 订阅</string>
    <string name="v1010_default_index_text_tagji">急</string>
    <string name="v1010_default_index_text_tagding">顶</string>
    <string name="v1010_default_sidebar_text_login">点击登录</string>
    <string name="v1010_default_searchh_hint_history">搜索历史：</string>
    <string name="v1010_default_searchh_hint_hot">热门搜索：</string>
    <string name="v1010_default_searchh_btn_clean">清空搜索历史</string>
    <string name="v1010_default_searchh_hint_nullhistory">暂无搜索历史</string>
    <string name="v1010_default_searchh_gethotsearch_success">获取最热搜索失败</string>
    <string name="v1010_default_pau_tab_ml">大陆地区</string>
    <string name="v1010_default_pau_tab_ga">港澳地区</string>
    <string name="v1010_default_pau_tab_tw">台湾地区</string>
    <string name="v1010_default_pau_hint_name">请输入姓名</string>
    <string name="v1010_default_pau_hint_region">请选择您的所属地区</string>
    <string name="v1010_default_pau_hint_identifycard">请输入身份证号</string>
    <string name="v1010_default_pau_text_validity">身份证有效期</string>
    <string name="v1010_default_changepwd_hint_oldpwd">请输入当前密码</string>
    <string name="v1010_default_changepwd_hint_newpwd">请输入6-20位新密码</string>
    <string name="v1010_default_changepwd_hint_checkpwd">请再次输入新密码</string>
    <string name="v1010_default_changepwd_btn_submit">保 存</string>
    <string name="v1010_default_undertake_letter_describe">请填写稿件说明，说明的越具体越清晰，中标的机率就越高哦。（50字内）</string>
    <string name="v1010_default_undertake_hint_work_bid">添加附件（附件可选，仅限1张）</string>
    <string name="v1010_default_undertake_hint_letter">隐藏稿件，仅雇主和自己可见</string>
    <string name="v1010_default_undertake_not_hint_letter">不隐藏稿件</string>
    <string name="v1010_default_undertake_enter_price">请输入您的报价</string>
    <string name="v1010_default_undertake_text_price">项目报价：</string>
    <string name="v1010_default_undertake_text_price_units">元</string>
    <string name="v1010_default_undertake_text_time_units">天</string>
    <string name="v1010_default_undertake_enter_timecycle">请输入您的周期</string>
    <string name="v1010_default_undertake_text_timecycle">工作周期：</string>
    <string name="v1010_default_bindphone_commit">提交</string>
    <string name="view_bottom_line_call_service"><u>联系客服</u></string>
</resources>